--- a/titlepage.tex
+++ b/titlepage.tex
@@ -57,7 +57,7 @@
 %	DATE SECTION
 %----------------------------------------------------------------------------------------
 
-{\large \today} % Date, change the \today to a set date if you want to be precise
+{\large May 25, 2018} % Date, change the \today to a set date if you want to be precise
 
 
 \vfill % Fill the rest of the page with whitespace
